# GVirtuSPlus

./: CMakeLists.txt  README.md
Faaswap_2_GVirtus/LogTransforTool/: bert_log.txt  bert_log_filter_.py  bert_log_tmp.txt  bert_parameter_filter.py  cudarpc_pb2.py  cv_cudaLog.txt  cv_cudaLog_filter.txt  cv_each_api_para.py  cv_log_filter.py  cv_parameter_extract  cv_parameter_extract.cpp  cv_parameter_filter.py  logtrack_bert.py  logtrack_cv.py  output_cv_par.txt  signal_pb2.py  string_2_enum.py  testParameterarser  testParameterarser.cpp
Faaswap_2_GVirtus/LogTransforTool/cv_each_para_value/: cudnnBatchNormalizationForwardInference.txt  cudnnConvolutionForward.txt  cudnnCreateConvolutionDescriptor.txt  cudnnCreateFilterDescriptor.txt  cudnnCreateTensorDescriptor.txt  cudnnDestroyConvolutionDescriptor.txt  cudnnDestroyFilterDescriptor.txt  cudnnDestroyTensorDescriptor.txt  cudnnSetConvolutionNdDescriptor.txt  cudnnSetFilterNdDescriptor.txt  cudnnSetTensorNdDescriptor.txt  parser  parser.cpp  whole.txt
Faaswap_2_GVirtus/bertCUDA/: CMakeLists.txt  bertModel.cpp  bert_cudaLog.txt  bert_parameter_pre.txt  cudarpc.proto
Faaswap_2_GVirtus/bertCUDA/proto/: cudarpc.pb.cc  cudarpc.pb.h
Faaswap_2_GVirtus/cvCUDA/: CMakeLists.txt  cvModel.cpp  cv_cudaLog.txt  cv_parameter_pre.txt
Faaswap_2_GVirtus/localCUDA/: CMakeLists.txt  bertModel  bertModel.cpp  bert_parameter_well.txt  cvModel  cvModel.cpp
demo/cudart/: add_grid.e  dummy0.e  launchKernel.e  matrixMul.e
dockerfiles/: gvbase.Dockerfile
etc/: properties1.json  properties2.json
include/gvirtus/backend/: Backend.h  Process.h
include/gvirtus/communicators/: CommunicatorFactory.h  EndpointFactory.h
lib/: liblog4cplus-2.0.so.3  liblog4cplusU-2.0.so.3
lib/frontend/: libcublas.so.11  libcublas.so.11.4  libcudart.so.11  libcudart.so.11.4  libcudnn.so.libcudnn  libcudnn.so.libcudnn.so.8  libcufft.so.11  libcufft.so.11.4  libcurand.so.11  libcurand.so.11.4
lib/pkgconfig/: log4cplus.pc
src/backend/: Backend.cpp  Process.cpp  main.cpp
src/frontend/: Frontend.cpp
(+19 files in other folders)
